# FreeBSD_Bluetooth_Audio_Device_Manager_v1

./: BluetoothManager.cpp  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  bluetooth_manager  bluetooth_manager.cpp  bluetooth_manager.py  cmake_uninstall.cmake.in  setup.sh  setup_and_run.sh
